2008-06-28  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* src/arch/win32/rescbm2.rc, src/arch/win32/resplus4.rc,
	src/arch/win32/resmenu.txt, src/arch/win32/ui.c,
	src/arch/win32/resvic20.rc, src/arch/win32/resc128.rc,
	src/arch/win32/resc64.rc, src/arch/win32/respet.rc: Removed
	IDM_EDIT_CUT (how should we cut something from the VICE window?
	Does not make much sense, does it?

	* arch/win32/ui.c: Added paste function to paste from clipboard
	to the VICE keyboard buffer. It is selected either via menu
	(Edit/Paste), or via right-click on the VICE window.

	* arch/win32/resmenu.txt, arch/win32/rescbm2.rc,
	arch/win32/resplus4.rc, arch/win32/resmenu.txt,
	arch/win32/resvic20.rc, arch/win32/resc128.rc,
	arch/win32/resc64.rc, arch/win32/respet.rc: Added IDM_EDIT_CUT,
	IDM_EDIT_COPY and IDM_EDIT_PASTE.

2008-06-27  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* autostart.c: Incorporated patch from iAN Coog: 1. Add colon
	(":") after "LOAD" and "RUN" lines used to start. This is
	helpful if there is already something on the screen, to prevent
	it to provoke some error messages. 2. remember original true
	drive emulation state before using autostart. This fixes the
	problem that TDE is not re-activated after autostart.  3. Dev
	Traps set to ON always in autostart_tape() for T64s. T64 without
	VTD don't load, so it's a must to activate it always with them.
	(TAP files don't care.)

2008-06-25  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/vice.dsw, arch/win32/_all.dsp: New (dummy) project
	_all.

	* c64/reu.c: Fixed problems with bank register not masking out
	unused bits, and autoload option which has to copy the shadow
	registers back. Fixed doxygen a little.

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.20

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/make-msvc-bindist.bat,
	arch/win32/watcom/make-watcom-bindist.bat: Added (had been
	forgotten in the previous version)
